tests/verifier/fail/test19.ial
function ssa void main()
{
    register int32 x;

    block entry
    {
        x = cmp.eq x, x;
        leave;
    }
}
